# FFP-2017

./: Game.julius  Game.lucius  NaBiodhFeargOrt.cabal  README.md  app.hs  client_session_key.aes  et  ffp-projekt-erste-schritte.css  ffp-projekt-erste-schritte.html  schteit.hs  stateshit.hs  widgets.lucius  yesod-minimal.cabal
app/: Colour.hs  DataDeclarations.hs  GameState.hs  GameStateFunctions.hs  Logic.hs  Main.hs  MoveFunctions.hs  Player.hs  TestStuff.hs  Utils.hs  Widgets.hs  ceisteanna.db3  client_session_key.aes
src/: Game.julius  Game.lucius  Logic.hs
