name:                NaBiodhFeargOrt
version:             1.0
-- synopsis:
-- description:
homepage:            https://github.com/andeacracht/FFP-2017#readme
license:             BSD3
license-file:        LICENSE
author:              David Müller
maintainer:          dmaxmueller@gmail.com
copyright:           2017 David Müller
category:            Web
build-type:          Simple
extra-source-files:  README.md
                    ,Game.julius
                    ,Game.lucius
cabal-version:       >=1.10

library
  hs-source-dirs:      app
  exposed-modules:     GameStateFunctions
                      ,Widgets
                      ,DataDeclarations
                      ,TestStuff
                      ,Utils
                      ,MoveFunctions
                      ,Player
                      ,Colour
                      ,GameState
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,random
                      ,text
                      ,shakespeare
                      ,yesod
                      ,aeson
                      ,persistent
                      ,persistent-template
                      ,persistent-sqlite
  default-language:    Haskell2010

executable NaBiodhFeargOrt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,aeson
                      ,containers
                      ,random
                      ,text
                      ,shakespeare
                      ,yesod
                      ,aeson
                      ,persistent
                      ,persistent-template
                      ,persistent-sqlite
  default-language:    Haskell2010

test-suite NaBiodhFeargOrt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AnDeacracht/FFP-2017
